// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestCollection Component should render 1`] = `
<TableCollection
  columns={
    Array [
      Object {
        "className": "TabbedCellHeader",
        "label": "Alert Name",
        "sortKey": "name",
        "width": "40%",
      },
      Object {
        "label": "Metric",
        "sortKey": "metric",
      },
      Object {
        "label": "Last Triggered",
        "sortKey": "sortKey",
      },
      Object {
        "label": "Status",
        "sortKey": "muted",
      },
      null,
    ]
  }
  defaultSortColumn="sortKey"
  defaultSortDirection="desc"
  filterBox={
    Object {
      "itemToStringKeys": Array [
        "name",
      ],
      "placeholder": "Search...",
      "show": true,
      "wrapper": [Function],
    }
  }
  getRowData={[Function]}
  pagination={true}
  rows={
    Array [
      Object {
        "formattedDate": "Never Triggered",
        "id": "id-1",
        "last_triggered": null,
        "metric": "monthly_sending_limit",
        "muted": true,
        "name": "my alert 1",
        "sortKey": "0",
      },
      Object {
        "formattedDate": "Jun 5 2019, 10:48am",
        "id": "id-2",
        "last_triggered": "2019-06-05T14:48:00.000Z",
        "metric": "monthly_sending_limit",
        "muted": false,
        "name": "my alert 2",
        "sortKey": "2019-06-05T14:48:00.000Z",
      },
      Object {
        "formattedDate": "Jun 15 2019, 10:48am",
        "id": "id-3",
        "last_triggered": "2019-06-015T14:48:00.000Z",
        "metric": "health_score",
        "muted": true,
        "name": "my alert 3",
        "sortKey": "2019-06-15T14:48:00.000Z",
      },
    ]
  }
  wrapperComponent={[Function]}
>
  <Component />
</TableCollection>
`;

exports[`TestCollection Component should render row data properly 1`] = `
Array [
  <div
    className="TabbedCellBody"
  >
    <PageLink
      to="/alerts/edit/id-1"
    >
      my alert 1
    </PageLink>
  </div>,
  <Tag>
    Monthly Sending Limit
  </Tag>,
  <DisplayDate
    formattedDate="Never Triggered"
    timestamp={null}
  />,
  <Connect(AlertToggle)
    id="id-1"
    muted={true}
  />,
  <Button
    flat={true}
    onClick={[Function]}
    size="default"
  >
    <Delete
      className="Icon"
    />
  </Button>,
]
`;

exports[`TestCollection Component should render row data properly 2`] = `
Array [
  <div
    className="TabbedCellBody"
  >
    <PageLink
      to="/alerts/edit/id-2"
    >
      my alert 2
    </PageLink>
  </div>,
  <Tag>
    Monthly Sending Limit
  </Tag>,
  <DisplayDate
    formattedDate="Jun 5 2019, 10:48am"
    timestamp="2019-06-05T14:48:00.000Z"
  />,
  <Connect(AlertToggle)
    id="id-2"
    muted={false}
  />,
  <Button
    flat={true}
    onClick={[Function]}
    size="default"
  >
    <Delete
      className="Icon"
    />
  </Button>,
]
`;

exports[`TestCollection Component should render row data properly 3`] = `
Array [
  <div
    className="TabbedCellBody"
  >
    <PageLink
      to="/alerts/edit/id-3"
    >
      my alert 3
    </PageLink>
  </div>,
  <Tag>
    Health Score
  </Tag>,
  <DisplayDate
    formattedDate="Jun 15 2019, 10:48am"
    timestamp="2019-06-015T14:48:00.000Z"
  />,
  <Connect(AlertToggle)
    id="id-3"
    muted={true}
  />,
  <Button
    flat={true}
    onClick={[Function]}
    size="default"
  >
    <Delete
      className="Icon"
    />
  </Button>,
]
`;
